Fix css with menu being behind navbar. wtf

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,3 +21,6 @@
   margin-bottom: 0px;
 }
 
+.sub-navbar {
+  z-index: -1;
+}
